fixes contrast issues with text, bg, and link color

--- a/app/assets/stylesheets/modules/header.scss
+++ b/app/assets/stylesheets/modules/header.scss
@@ -4,8 +4,15 @@ header {
   .lux-announcement {
     @extend .alert-info;
     text-align: center;
+    color: #31708f;
+    background-color: #d9edf7;
+    .lux-link {
+      color: #1f4f7e;
+    }
     .lux-heading {
       @extend .alert-info;
+      color: #31708f;
+      background-color: #d9edf7;
     }
   }
 
